<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".NewOrderActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".NewOrderActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/newOrderToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/Theme.App.Toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="Lista de Platos"
            app:titleTextColor="@color/colorPrimaryLight"/>

        <TextView
            android:id="@+id/newOrderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/newOrderLower"
            android:textAllCaps="false"
            android:textSize="@dimen/dim32"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newOrderToolbar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailOrderTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/dim16"
            app:errorEnabled="true"
            app:helperText="@string/obligatoryFieldHelper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newOrderTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/emailDigits" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/streetTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/streetHint"
            android:textSize="@dimen/dim16"
            app:errorEnabled="true"
            app:helperText="@string/obligatoryFieldHelper"
            app:layout_constraintEnd_toStartOf="@+id/numberTextField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailOrderTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="22" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/numberTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/numberHint"
            android:textSize="@dimen/dim16"
            app:errorEnabled="true"
            app:helperText="@string/obligatoryFieldHelper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/streetTextField"
            app:layout_constraintTop_toBottomOf="@+id/emailOrderTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:maxLength="5" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/deliverRadioGroup"
            android:layout_width="@dimen/dim0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim32"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/dim32"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/streetTextField">

            <RadioButton
                android:id="@+id/shippingRadioButton"
                android:layout_width="@dimen/dim162"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/shipping"
                android:textSize="@dimen/dim16" />

            <RadioButton
                android:id="@+id/takeAwayRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/takeAway"
                android:textSize="@dimen/dim16" />

        </RadioGroup>

        <Button
            android:id="@+id/addPlateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:drawableLeft="@drawable/selector"
            android:enabled="false"
            android:paddingHorizontal="40dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/addPlate"
            android:textAllCaps="true"
            android:textFontWeight="600"
            android:textSize="@dimen/dim18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deliverRadioGroup" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/orderPlatesRecyclerView"
            android:layout_width="390dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addPlateButton" />

        <androidx.cardview.widget.CardView
            android:id="@+id/orderDescriptionCardView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orderPlatesRecyclerView"
            card_view:cardBackgroundColor="@color/colorPrimaryLight"
            card_view:cardCornerRadius="15dp"
            card_view:cardElevation="3dp"
            card_view:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <TextView
                    android:id="@+id/orderDescriptionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/platesQuantity"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/platesQuantityTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/orderPriceDescriptionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/totalPrice"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/orderDescriptionTextView" />

                <TextView
                    android:id="@+id/orderPriceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/platesQuantityTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/confirmOrderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/orangeBrick"
            android:text="@string/confirmOrder"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orderDescriptionCardView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>